 B Fix incorrect handling in a couple of places
 C Improve and unify error strings
 B Fix issue #2

Release 1.0 (2014-04-06):
 R This major release is considered stable. The interface of this
   wrapper is stable until further notice.
 I Rename constants to reflect Go naming conventions
 I Change methods of type nfc.Device to use a value receiver
 B Fix an issue were copying structs of type nfc.Device could cause a
   pointer into unallocated memory to come into existence

Release 2.0 (2014-08-30)
 B Make this wrapper compile under Go 1.3 and newer.
 I Change the layout of some Target structures. This is needed to
   simplify the marshalling code. The new target structures also follow
   the underlying C structures more closely.
 I Some names where changed to match Go naming conventions. This was
   done now as I believe it is better to lump incompatibly changes into
   one release as much as possible.
 C Error strings were converted to lower case.
 B Some typos where fixed in comments.

Release 2.0.1 (2015-09-28)
 B Set device pointer to nil after calling nfc_close(), not before.

Release 2.0.2 (2016-01-14)
 B Fix error handling in (*Device).InitiatorSelectPassiveTarget()
 B Fix initData handling (ibid.), these fix issue #8
 R Improve documentation (ibid.)

Release 2.1.0 (2020-05-22)
 N Introduce a new function nfc.Device.SupportedBaudRatesTargetMode()
   wrapping the corresponding new function in the upcoming 1.7.2 release
   of the libnfc.
 C Bump libnfc dependency to version 1.7.2.
 C Allow nil Target parameter to
   function nfc.Device.InitiatorTargetIsPresent() as supported since
   release 1.7.1 of the libnfc.
 R adapt Go modules and discontinue the subdirectory scheme.

Release 2.2.0 (upcoming)
 N Provide Device.InitiatorPollTarget wrapping nfc_initiator_poll_target.
 N Add support for Thinfilm NFC Barcode targets
 I Due to upstream changes, the value of the modulation type enumeration
   constants has changed.